--- a/intro.tex
+++ b/intro.tex
@@ -97,6 +97,7 @@ To compare tokamaks used as fusion reactors the obvious metrics are costs. ITER 
 As such, this paper adopts stand-ins for the conventional capital cost and cost-per-watt metrics. This is done for simplicity, for both: modeling reasons as well as conveying the two metrics to physicists. To begin, the relevant approximation for capital cost -- how much a tokamak costs to build -- is the magnetic energy. \cite{griffiths}
 \begin{equation}
 	W_M \propto R^3 B^2
+	\label{eq:w_m}
 \end{equation}
 \myequations{Magnetic Energy -- $W_M$}
 
@@ -114,6 +115,7 @@ Summarizing, the cost-per-watt coupled with the duty factor provides an ad hoc p
 	\tcboxmath{
 	C_W = \frac{W_M}{f_{Duty} \cdot P_F}
 	}
+	\label{eq:c_w}
 \end{equation}
 \myequations{Cost per Watt -- $C_W$}
 
