--- a/main.bib
+++ b/main.bib
@@ -3,6 +3,17 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+@article{stellar,
+  title={Physics of the density limit in the W7-AS stellarator},
+  author={Giannone, Louis and Baldzuhn, J and Burhenn, R and Grigull, P and Stroth, U and Wagner, F and Brakel, R and Fuchs, C and Hartfuss, HJ and McCormick, K and others},
+  journal={Plasma physics and controlled fusion},
+  volume={42},
+  number={6},
+  pages={603},
+  year={2000},
+  publisher={IOP Publishing}
+}
+
 @article{hutch,
   title={Principles of plasma diagnostics},
   author={Hutchinson, Ian H},
