--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
 \usepackage{changes}
 \definecolor{blue}{rgb}{0,0,1.}
 
-\includeonly{results,biblio}
+\includeonly{future,biblio}
 
 \let\vec\mathbf
 
