--- a/images/limit_regimes.tex
+++ b/images/limit_regimes.tex
@@ -1,5 +1,5 @@
 \begin{tikzpicture}[]
-\begin{axis}[height = {101.6mm}, ylabel = {}, title = {Reactor Limit Regimes}, xmin = {-0.005}, xmax = {8.015}, ymax = {1.0015}, xlabel = {$B_0$}, {unbounded coords=jump, scaled x ticks = false, xticklabel style={rotate = 0}, xmajorgrids = false, xtick = {2,6}, xticklabels = {$low$,$high$}, xtick align = inside, axis lines* = left, scaled y ticks = false, yticklabel style={rotate = 0}, ymajorticks=false, ymajorgrids = false, axis lines* = left,     xshift = 0.0mm,
+\begin{axis}[height = {101.6mm}, ylabel = {}, title = {Reactor Limit Regimes}, xmin = {-0.005}, xmax = {8.015}, ymax = {1.0015}, xlabel = {$B_0$}, {unbounded coords=jump, scaled x ticks = false, xticklabel style={rotate = 0}, xmajorgrids = false, xtick = {2.06,5.94}, xticklabels = {$low$,$high$}, xtick align = inside, axis lines* = left, scaled y ticks = false, yticklabel style={rotate = 0}, ymajorticks=false, ymajorgrids = false, axis lines* = left,     xshift = 0.0mm,
     yshift = 0.0mm,
     axis background/.style={fill={rgb,1:red,1.00000000;green,1.00000000;blue,1.00000000}}
 , colorbar style={title=}}, ymin = {0}, width = {152.4mm}]\addplot+ [color = {rgb,1:red,0.67554396;green,0.55566233;blue,0.09423434},
@@ -51,11 +51,11 @@ mark options = {
     rotate = 0,
     solid
 },fill = {rgb,1:red,0.24222430;green,0.64327509;blue,0.30444865}, fill opacity=0.25,forget plot]coordinates {
-(1.25, 0.4)
-(2.75, 0.4)
-(2.75, 0.6)
-(1.25, 0.6)
-(1.25, 0.4)
+(1.24, 0.375)
+(2.88, 0.375)
+(2.88, 0.625)
+(1.24, 0.625)
+(1.24, 0.375)
 };
 \addplot+ [color = {rgb,1:red,0.00000000;green,0.60560316;blue,0.97868012},
 draw opacity=1.0,
@@ -69,11 +69,11 @@ mark options = {
     rotate = 0,
     solid
 },fill = {rgb,1:red,0.00000000;green,0.60560316;blue,0.97868012}, fill opacity=0.25,forget plot]coordinates {
-(3.0, 0.4)
-(5.0, 0.4)
-(5.0, 0.6)
-(3.0, 0.6)
-(3.0, 0.4)
+(3.12, 0.375)
+(4.88, 0.375)
+(4.88, 0.625)
+(3.12, 0.625)
+(3.12, 0.375)
 };
 \addplot+ [color = {rgb,1:red,0.88887350;green,0.43564919;blue,0.27812294},
 draw opacity=1.0,
@@ -87,11 +87,11 @@ mark options = {
     rotate = 0,
     solid
 },fill = {rgb,1:red,0.88887350;green,0.43564919;blue,0.27812294}, fill opacity=0.25,forget plot]coordinates {
-(5.25, 0.4)
-(6.75, 0.4)
-(6.75, 0.6)
-(5.25, 0.6)
-(5.25, 0.4)
+(5.12, 0.375)
+(6.76, 0.375)
+(6.76, 0.625)
+(5.12, 0.625)
+(5.12, 0.375)
 };
 \addplot+ [color = {rgb,1:red,0.50196078;green,0.50196078;blue,0.50196078},
 draw opacity=1.0,
@@ -105,8 +105,8 @@ mark options = {
     rotate = 0,
     solid
 },forget plot]coordinates {
-(1.0, 0.65)
-(7.0, 0.65)
+(1.0, 0.67)
+(7.0, 0.67)
 };
 \addplot+ [color = {rgb,1:red,0.50196078;green,0.50196078;blue,0.50196078},
 draw opacity=1.0,
@@ -120,21 +120,33 @@ mark options = {
     rotate = 0,
     solid
 },forget plot]coordinates {
-(1.0, 0.35)
-(7.0, 0.35)
+(1.0, 0.32999999999999996)
+(7.0, 0.32999999999999996)
 };
-\node at (axis cs:2, 0.5) [,
+\node at (axis cs:2.06, 0.55) [,
 color={rgb,1:red,0.00000000;green,0.00000000;blue,0.00000000}, draw opacity=1.0,
 rotate=0.0
-] {$q_{*}$};
-\node at (axis cs:4, 0.5) [,
+] {$Kink$};
+\node at (axis cs:4, 0.55) [,
 color={rgb,1:red,0.00000000;green,0.00000000;blue,0.00000000}, draw opacity=1.0,
 rotate=0.0
-] {$\beta_N$};
-\node at (axis cs:6, 0.5) [,
+] {$Beta$};
+\node at (axis cs:5.94, 0.55) [,
 color={rgb,1:red,0.00000000;green,0.00000000;blue,0.00000000}, draw opacity=1.0,
 rotate=0.0
-] {$P_W$};
+] {$Wall$};
+\node at (axis cs:2.06, 0.45) [,
+color={rgb,1:red,0.00000000;green,0.00000000;blue,0.00000000}, draw opacity=1.0,
+rotate=0.0
+] {$(q_{*})$};
+\node at (axis cs:4, 0.45) [,
+color={rgb,1:red,0.00000000;green,0.00000000;blue,0.00000000}, draw opacity=1.0,
+rotate=0.0
+] {$(\beta_N)$};
+\node at (axis cs:5.94, 0.45) [,
+color={rgb,1:red,0.00000000;green,0.00000000;blue,0.00000000}, draw opacity=1.0,
+rotate=0.0
+] {$(P_W)$};
 \end{axis}
 
 \end{tikzpicture}
