--- a/images/sensitivities/act_1_eta_CD_vs_wave_theta.tex
+++ b/images/sensitivities/act_1_eta_CD_vs_wave_theta.tex
@@ -1,5 +1,5 @@
 \begin{tikzpicture}[]
-\begin{axis}[height = {101.6mm}, ylabel = {${\eta}_{CD}$}, title = {Act I}, xmin = {0.0}, xmax = {324.0}, ymax = {0.4}, xlabel = {${wave}_{\theta}$}, {unbounded coords=jump, scaled x ticks = false, xticklabel style={rotate = 0}, xmajorgrids = true, xtick = {0.0,100.0,200.0,300.0}, xticklabels = {0,100,200,300}, xtick align = inside, axis lines* = left, scaled y ticks = false, yticklabel style={rotate = 0}, ymajorgrids = true, ytick = {0.0,0.1,0.2,0.30000000000000004,0.4}, yticklabels = {0.0,0.1,0.2,0.3,0.4}, ytick align = inside, axis lines* = left,     xshift = 0.0mm,
+\begin{axis}[height = {101.6mm}, ylabel = {${\eta}_{CD}$}, title = {Act I}, xmin = {0.0}, xmax = {324.0}, ymax = {0.4}, xlabel = {${\theta}_{wave}$}, {unbounded coords=jump, scaled x ticks = false, xticklabel style={rotate = 0}, xmajorgrids = true, xtick = {0.0,100.0,200.0,300.0}, xticklabels = {0,100,200,300}, xtick align = inside, axis lines* = left, scaled y ticks = false, yticklabel style={rotate = 0}, ymajorgrids = true, ytick = {0.0,0.1,0.2,0.30000000000000004,0.4}, yticklabels = {0.0,0.1,0.2,0.3,0.4}, ytick align = inside, axis lines* = left,     xshift = 0.0mm,
     yshift = 0.0mm,
     axis background/.style={fill={rgb,1:red,1.00000000;green,1.00000000;blue,1.00000000}}
 , colorbar style={title=}}, ymin = {0.0}, width = {152.4mm}]\addplot+ [color = {rgb,1:red,0.88887350;green,0.43564919;blue,0.27812294},
