--- a/main.tex
+++ b/main.tex
@@ -60,16 +60,19 @@
 
 \pgfplotsset{compat=1.3}
 
-%\usepackage[final]{changes}
-\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
-\usepackage{changes}
-\definecolor{blue}{rgb}{0,0,1.}
+\usepackage[final]{changes}
+%\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
+%\usepackage{changes}
+%\definecolor{blue}{rgb}{0,0,1.}
 
-\includeonly{future,biblio}
+%\includeonly{conclusion,biblio}
 
 \let\vec\mathbf
 
 \usepackage{scrextend}
+
+\usepackage{enumitem}
+\setlist{nolistsep}
 
 \begin{document}
 
